Ultimate superduper important fix :100:

--- a/Kurzusok/Kurzusok/Views/Syllabus/_CreateSubjectToSyllabus.cshtml
+++ b/Kurzusok/Kurzusok/Views/Syllabus/_CreateSubjectToSyllabus.cshtml
@@ -59,12 +59,12 @@
                     }
                     <div class="form-group">
                         <label asp-for="Credit" class="control-label">Kreditérték</label>
-                        <input asp-for="Credit" class="form-control" min="0" max="7" />
+                        <input asp-for="Credit" class="form-control" min="0" />
                         <span asp-validation-for="Credit" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="RecommendedSemester" class="control-label">Ajánlott félév</label>
-                        <input asp-for="RecommendedSemester" class="form-control" min="0" max="7" />
+                        <input asp-for="RecommendedSemester" class="form-control" min="0" />
                         <span asp-validation-for="RecommendedSemester" class="text-danger"></span>
                     </div>
                     <div class="form-group">
