Reworked register because it wasnt working

--- a/Kurzusok/Kurzusok/Views/Administration/DeleteAccounts.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/DeleteAccounts.cshtml
@@ -19,7 +19,7 @@
                     <div id="names"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Mége</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Mégse</button>
                     <button type="submit" class="btn btn-danger">Felhasználók törlése</button>
                 </div>
             </form>
