--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/AccessDenied"
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Hozzáférés megtagadva";
 }
 
 <header>
