Configure Emailsender for forgot password

--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,12 +1,13 @@
 ﻿@page "/ForgotPassword/Confirmation"
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Elfelejtett jelszó megerősítése";
     Layout = "/Views/Shared/_SignInLayout.cshtml";
 }
-
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="border border-secondary shadow rounded align-self-center py-5 px-4 bg-white">
+    <h1>@ViewData["Title"]</h1>
+    <p>
+        Kérjük erősítse meg a jelszó változtatást az email címre küldött linkre kattintva! Ha nem találja az üzenetet, nézze meg a <strong>spam</strong> mappát!
+    </p>
+</div>
 
