--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,13 @@
-﻿@page
+﻿@page "/ResetPassword/Confirmation"
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Jelszó visszaállítás megerősítése";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="border border-secondary shadow rounded align-self-center py-5 px-4 bg-white">
+    <h1>@ViewData["Title"]</h1>
+    <p>
+        Jelszó sikeresen megváltoztatva. <a asp-page="./Login">Kattintson ide a bejelentkezéshez</a>.
+    </p>
+</div>
+
