--- a/Kurzusok/Kurzusok/Views/Shared/_SignInLayout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_SignInLayout.cshtml
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bejelentkezés</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/signin.css" />
-    @RenderSection("bgimage", required: false)
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" asp-append-version="true" runat="server" />
+    <link rel="stylesheet" href="~/css/signin.css" asp-append-version="true" runat="server" />
 </head>
 <body class="text-center">
     <div class="w-85">
