--- a/Kurzusok/Kurzusok/wwwroot/css/signin.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/signin.css
@@ -15,9 +15,15 @@ body {
     justify-content: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
+    background-image: url('/sze_logo_fekvo_RGB_white_bg.png');
+    background-color: rgba(169,169,169,0.5);
+    background-blend-mode: lighten;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
+    margin: 0;
+    min-height: 100%;
 }
-
 .form-signin {
     width: 100%;
     max-width: 330px;
