Creaete new syllabus(programme)

--- a/Kurzusok/Kurzusok/Views/Syllabus/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Syllabus/Index.cshtml
@@ -196,8 +196,21 @@
                 }
 
             </li>
+            <li class="nav-item pb-1 height">
+                <button class=" btn text-dark pl-1 py-0 d-inline text-nowrap" data-toggle="subject-modal" data-target="#addSyllabus" data-url="@Url.Action("CreateSyllabus")" >Új mintatanterv</button>
+            </li>
         </ul>
         <ul class="nav nav-sidebar" id="closed">
+
+            <li class="nav-item pb-1">
+            </li>
+            <li class="nav-item pb-1">
+                <i class="fas fa-list-ul"></i>
+            </li>
+
+            <li class="nav-item pb-1">
+                <i class="fas fa-plus-square"></i>
+            </li>
         </ul>
     </div>
 }
