Add, edit, delete, search teachers

--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
@@ -141,7 +141,10 @@
                                             }
                                             else
                                             {
-                                                <option value="@teacher.TeacherId">@teacher.Name</option>
+                                                if (teacher.IsWorking)
+                                                {
+                                                    <option value="@teacher.TeacherId">@teacher.Name</option>
+                                                }
                                             }
                                         }
                                     </select>
